--- a/setup/README
+++ b/setup/README
@@ -12,6 +12,7 @@ sudo apt-get install git #if not already installed
 sudo apt-get install mysql-server  mysql-client
 
 2) Make a user that does not have sudoer access.  For simplicity, we want all instances to have the same user name: owncloud.
+(If you are doing development, it will be convenient to have your user be a sudoer.  However, for production, they should NOT be sudoer).
 
 3)  Get code:
 cd /home/owncloud
@@ -35,18 +36,23 @@ TODO: this piece needs to be updated after updating the core.
  chown www-data:www-data data
  chown www-data:www-data config
 
-6) Visit the owncloud page in the browser to start install
+6) Visit the owncloud page in the browser to start install (e.g. http://yourserver/owncloud)
 7) If you are using the multiinstance app, the admin account MUST be named "admin@<LOCATION_NAME>" (e.g. admin@UCSB), with whatever password 
 If you are not, it can be whatever you like
 
-8) Open advanced tab on webpage
-9) Create sql user:
-CREATE USER 'owncloud'@'localhost' IDENTIFIED BY ''
-#want a password in the above
-create database owncloud;
+8) Open Advanced arrow/accordion
+9) Select Database type: MySQL
+Create sql user:
+mysql -uroot -p #open mysql with root user from terminal
+#enter password (you should have set this when you installed mysql--I think!)
+
+In mysql terminal:
+CREATE USER 'owncloud'@'localhost' IDENTIFIED BY ''; #want a password in between quotes; user = owncloud, password = <whatever you set it to in between the quotes>
+create database owncloud;	#dbname = owncloud
 GRANT ALL ON `owncloud`.* TO `owncloud`@`localhost`;
-SHOW GRANTS FOR `owncloud`@`localhost`;
-#use these credential for the info in the dropdown
+SHOW GRANTS FOR `owncloud`@`localhost`; #confirm that user owncloud has permissions to owncloud database 
+
+Use these credential for the info in the dropdown
 
 10) Installation should be finished
 11) Do setup steps for friends and multiinstance apps (found in their respective code directories)
